--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="" />
+    <link
+      rel="icon"
+      href="https://img.freepik.com/free-vector/gradient-coding-logo-template_23-2148809439.jpg?semt=ais_hybrid&w=740"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
